--- a/eisvogel.tex
+++ b/eisvogel.tex
@@ -860,9 +860,9 @@ $else$
   \lfoot[$if(footer-right)$$footer-right$$else$\thepage$endif$]{$if(footer-left)$$footer-left$$else$$for(author)$$author$$sep$, $endfor$$endif$}
   \cfoot[$if(footer-center)$$footer-center$$else$$endif$]{$if(footer-center)$$footer-center$$else$$endif$}
   \rfoot[$if(footer-left)$$footer-left$$else$$for(author)$$author$$sep$, $endfor$$endif$]{$if(footer-right)$$footer-right$$else$\thepage$endif$}
-  \renewcommand{\headrulewidth}{1pt}
+  \renewcommand{\headrulewidth}{0.4pt}
   \renewcommand{\footrulewidth}{0.4pt}
-  \rhead{\includegraphics[height=1cm]{logo.png}}
+  \rhead{\includegraphics[width=3cm]{logo.png}}
 }
 \pagestyle{eisvogel-header-footer}
 $if(page-background)$
