--- a/eisvogel.tex
+++ b/eisvogel.tex
@@ -862,7 +862,7 @@ $else$
   \rfoot[$if(footer-left)$$footer-left$$else$$for(author)$$author$$sep$, $endfor$$endif$]{$if(footer-right)$$footer-right$$else$\thepage$endif$}
   \renewcommand{\headrulewidth}{0.4pt}
   \renewcommand{\footrulewidth}{0.4pt}
-  \rhead{\resizebox{20mm}{10mm}{\includegraphics{logo.png}}}
+ % \rhead{\resizebox{20mm}{10mm}{\includegraphics{logo.png}}}
 }
 \pagestyle{eisvogel-header-footer}
 $if(page-background)$
