--- a/eisvogel.tex
+++ b/eisvogel.tex
@@ -729,7 +729,7 @@ $if(listings)$
 %
 % general listing colors
 %
-\definecolor{listing-background}{HTML}{F7F7F7}
+\definecolor{listing-background}{HTML}{CCCCCC}
 \definecolor{listing-rule}{HTML}{B3B2B3}
 \definecolor{listing-numbers}{HTML}{B3B2B3}
 \definecolor{listing-text-color}{HTML}{000000}
@@ -756,7 +756,7 @@ $endif$
   frame            = single,
   framesep         = 0.19em,
   rulecolor        = \color{listing-rule},
-  frameround       = ffff,
+  frameround       = cccc,
   tabsize          = 4,
   numberstyle      = \color{listing-numbers},
   aboveskip        = 1.0em,
