--- a/eisvogel.tex
+++ b/eisvogel.tex
@@ -770,7 +770,7 @@ $endif$
   identifierstyle  = \color{listing-identifier},
   commentstyle     = \color{listing-comment},
   stringstyle      = \color{listing-string},
-  showstringspaces = false,
+  showstringspaces = true,
   escapeinside     = {/*@}{@*/}, % Allow LaTeX inside these special comments
   literate         =
   {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
